--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,8 @@
 # Core dependencies
 python-dateutil>=2.8.2
 pydantic>=2.5.0
+pydantic-settings>=2.1.0
+aiohttp>=3.8.0
 typing-extensions>=4.9.0
 
 # Data processing
@@ -12,7 +14,7 @@ fastapi>=0.104.0
 uvicorn>=0.24.0
 
 # LLM and AI
-openai>=1.3.0
+openai>=1.54.0
 langchain>=0.0.350
 
 # Database
